--- a/client/client.jade
+++ b/client/client.jade
@@ -56,3 +56,4 @@ template(name='mlayout')
 template(name='not_found')
     .ui.text.container
         .ui.center.aligned.header not found
+        a.ui.button(href="/healthclub") check in
