--- a/client/front.jade
+++ b/client/front.jade
@@ -134,7 +134,7 @@ template(name='model_scroller')
 template(name='healthclub_status')
     .ui.basic.segment
         .ui.inline.header
-            i.red.ban.icon
+            i.green.checkmark.icon
             |upper hot tub
         div
         .ui.inline.header
